# Plot3D

./: README.md  pyproject.toml
plot3d/: __init__.py  __main__.py  async_loop_thread.py  plot.py  publisher.py  td_client.py  tools.py  utils.py
plot3d/td_app/: display_3d.py  display_image.py  http_server.py  td_app.py  threaded_zmq_poller.py
tests/: conftest.py  test_app.py
