[project]
name = "plot3d"
version = "0.0.1"
description = "Plot3D"
authors = [
    {name = "Eduardo Davalos", email="eduardo.davalos.anaya@vanderbilt.edu"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">3.6"

keywords = ["streaming", "data", "3d", "streaming", "real-time"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy",
    "imutils",
    "opencv-python-headless",
    "pandas",
    "trimesh",
    "pyzmq",
    "PyQt5",
    "pyqtgraph",
    "aiohttp"
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-asyncio',
    'pytest-repeat',
    'pytest-lazy-fixture',
    'pytest-order',
    'pytest-rerunfailures',
    'pytest-timeout',
]

[project.urls]
homepath = "https://github.com/edavalosanaya/Plot3D"
repository = "https://github.com/edavalosanaya/Plot3D"

# Entrypoint
[project.scripts]
plot3d = "plot3d.__main__:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
ignore = ["E501"]
select = ["E", "W", "F", "C", "B", "I"]
ignore-init-module-imports = true
fixable = ["I001"]  # isort fix only

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests

[tool.pytest.ini_options]
asyncio_mode = 'auto'

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Logging + File
log_file = "chimerapy-engine-test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')"
]
